api specs basic service